Fixed very long word strings leaving post div. (Now breaking overflow)

--- a/style/normal.css
+++ b/style/normal.css
@@ -160,6 +160,7 @@ body {
 
 .post {
     margin-bottom: 8vh;
+    overflow-wrap: break-word;
 }
 
 .post-title-date {
